fix: adjust Gradle version and dependency management to restore ObjectMapper autowiring
refactor: fully restructure SecurityConfig and its supporting classes to improve organization and prepare for future enhancements

refactor: update the static frontend to work with the new Java API, replacing the old Golang backend integration, switching pagination from offset to cursor-based navigation

refactor: add ConfigurationProperties support for JWT configuration

refactor: update JwtUtil to use the new jsonwebtoken syntax

refactor: improve cursor pagination by introducing nextLastId and nextLastClockIn to avoid ambiguity when ClockIn values are equal and to support proper ascending and descending ordering

feat: implement TimeEntryRepositoryCustom to improve cursor-based search and sorting

style: fix indentation and import ordering