@@ -1,10 +1,15 @@
 package dev.alexis.hourlypaytracker.config;
 
+import dev.alexis.hourlypaytracker.security.CustomAuthenticationEntryPoint;
+import dev.alexis.hourlypaytracker.security.JwtAuthenticationFilter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -12,82 +17,90 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-
-import dev.alexis.hourlypaytracker.security.JwtAuthenticationFilter;
-import dev.alexis.hourlypaytracker.security.JwtService;
-import dev.alexis.hourlypaytracker.security.CustomAuthenticationEntryPoint;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import lombok.RequiredArgsConstructor;
-
-import java.util.Arrays;
 import java.util.List;
 
 /**
  * Security configuration for the application.
- * Defines public/protected endpoints and JWT authentication filter.
+ * Defines public and protected endpoints and configures JWT authentication.
  */
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JwtService jwtService;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
 
-    /**
-     * Builds the security filter chain configuration.
-     * 
-     * @param http HTTP security configuration builder
-     * @param authenticationEntryPoint Custom entry point for authentication failures
-     * @return Configured security filter chain
-     * @throws Exception if configuration fails
-     */
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http, CustomAuthenticationEntryPoint authenticationEntryPoint) throws Exception {
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
         http
-            .csrf(csrf -> csrf.disable())
-            .exceptionHandling(exception -> exception.authenticationEntryPoint(authenticationEntryPoint))
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/website/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/company-payment-information/hourly-rates").permitAll()
-                .anyRequest().authenticated()
-            )
-            .addFilterBefore(new JwtAuthenticationFilter(jwtService), UsernamePasswordAuthenticationFilter.class);
+                .cors(Customizer.withDefaults())
+                .csrf(AbstractHttpConfigurer::disable)
+
+                .exceptionHandling(exception ->
+                        exception.authenticationEntryPoint(authenticationEntryPoint)
+                )
+
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+
+                .authorizeHttpRequests(auth -> auth
+
+                        // Authentication
+                        .requestMatchers("/api/auth/**").permitAll()
+
+                        // Website
+                        .requestMatchers("/", "/account", "/dashboard").permitAll()
+                        .requestMatchers("/website/**").permitAll()
+
+                        // Public API
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/company-payment-information/hourly-rates"
+                        ).permitAll()
+
+                        // Everything else
+                        .anyRequest().authenticated()
+                )
+
+                .addFilterBefore(
+                        jwtAuthenticationFilter,
+                        UsernamePasswordAuthenticationFilter.class
+                );
 
         return http.build();
     }
 
     /**
-     * Configures CORS (Cross-Origin Resource Sharing) settings.
-     * 
-     * @return CORS configuration source allowing requests from all origins
+     * Configures Cross-Origin Resource Sharing (CORS).
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration configuration = new CorsConfiguration();
+
         configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        configuration.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+        ));
+
+        configuration.setAllowedHeaders(List.of("*"));
+
         configuration.setAllowCredentials(false);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
 
-    /**
-     * Provides ObjectMapper bean for JSON serialization/deserialization.
-     * 
-     * @return Configured ObjectMapper instance with support for Java 8 date/time types
-     */
-    @Bean
-    public ObjectMapper objectMapper() {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new JavaTimeModule());
-        mapper.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
-        return mapper;
+        source.registerCorsConfiguration("/**", configuration);
+
+        return source;
     }
 }
